<resources>
    <string name="app_name">Property Cross</string>
    <string name="rental" translatable="false">alquiler</string>
    <string name="sale" translatable="false">venta</string>
    <string name="favourite">favourite</string>
    <string name="no_favourite">nofavourite</string>

    <string name="title_menu_main">Menú principal</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="next">Siguiente</string>
    <string name="email">Correo electrónico</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="receive_notifications">Recibir notificaciones</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">OK</string>
    <string name="rent">Alquiler</string>
    <string name="buy">Venta</string>
    <string name="enable_gps">Habilitar GPS</string>
    <string name="enable_gps_message">Habilite el GPS para poder ordenar según la distancia de su ubicación a las propiedades.</string>
    <string name="results_not_found">No se han encontrado resultados de búsqueda</string>
    <string name="properties">Immuebles</string>
    <string name="property">Property</string>
    <string name="search">Buscar</string>
    <string name="search_hint">Dirección, CP, Ciudad…</string>
    <string name="choose_location">Escoge una localización</string>
    <string name="my_location">Mi ubicación</string>
    <string name="favourites">Favoritos</string>
    <string name="favourites_not_found">No tienes immuebles favoritos</string>
    <string name="init_session">Iniciar sesión</string>
    <string name="init_session_fb">Inicia sesión FB</string>
    <string name="profile">Perfil</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="remove_user">Eliminar usuario</string>
    <string name="sesion_favourites">Para poder acceder a la sección de Favoritos debes de haber iniciado sesión</string>
    <string name="sesion_profile">Para poder acceder a la sección de Perfil debes de haber iniciado sesión</string>
    <string name="message_dialog_remove_user">¿Estás seguro que quieres eliminar el usuario?</string>
    <string name="message_dialog_close_session">¿Estás seguro que quieres cerrar la sesión?</string>
    <string name="views">visitas</string>
    <string name="view_map">Ver mapa</string>
    <string name="comments">Comentarios</string>
    <string name="view_more">Ver más</string>
    <string name="add_comment">Añadir comentario</string>
    <string name="call">Llamar</string>
    <string name="send_email">Enviar mail</string>
    <string name="error">Error</string>
    <string name="no_same_passwords">Las contraseñas introducidas no coinciden.</string>
    <string name="email_no_valid">El correo electrónico introducido no es válido</string>
    <string name="empty_fields">Todos los campos tienen que estar rellenados.</string>
    <string name="select_photo">Seleccionar foto:</string>
    <string name="title_order">Ordenar por</string>
    <string name="less_more_meters">de menos a más m2</string>
    <string name="more_less_meters">de más a menos m2</string>
    <string name="less_more_distance">de menos a más distancia</string>
    <string name="less_more_price">de menos a más precio</string>
    <string name="more_less_price">de más a menos precio</string>
    <string name="google_maps_key">AIzaSyDmNiloMu-D-e9pS8U52CWlj_vxxD48rfQ</string>
    <string name="facebook_app_id">294642490953541</string>
    <string name="share">Comparte con</string>
    <string name="share_text">Property Cross es la mejor aplicación de búsqueda de immuebles.</string>
    <string name="no_comments">No hay comentarios sobre este immueble</string>
    <string name="message_error_500">Estamos teniendo problemas internos. Por favor, disculpen las molestias.</string>
    <string name="dialog_connection_error">Lo sentimos pero no ha sido posible establecer la conexión. Vuelve a intentarlo más tarde, si el problema persiste ponte en contacto con nosotros.</string>
    <string name="dialog_loading">Cargando…</string>
    <string name="dialog_title_error_login">El usuario o la contraseña son incorrectos. Por favor vuelve a intentarlo.</string>
    <string name="permission_reason">%1$s necesita los permisos de %2$s para poder continuar.</string>
    <string name="permission_reason_denied">%1$s no puede continuar sin los permisos de %2$s.\nPor favor, actívalos en los ajustes de la aplicación.</string>
    <string name="permission_location">Ubicación</string>
    <string name="contact_owner">Contactar con el propietario</string>
    <string name="write_comment">Escribe tu comentario…</string>
    <string name="dateTimeFormat" translatable="false">%1$s/%2$s/%3$s %4$s:%5$s</string>
</resources>
