<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="40dp">

        <TextView
            android:text="@string/init_session_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fbSessionText"
            android:padding="20dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

        <TextView
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginSessionText"
            android:padding="20dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

        <TextView
            android:text="@string/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signupSessionText"
            android:gravity="center_horizontal"
            android:padding="20dp" />
    </LinearLayout>


</FrameLayout>