<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/favouritesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tabFavouritesLayout"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/numberPropertiesFavourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/favourites_not_found"
                android:textStyle="normal|bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerFavourites"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/noSessionFavouritesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:text="@string/sesion_favourites"
            android:textSize="18sp" />

        <Button
            android:id="@+id/sessionFavouritesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:paddingBottom="10dp"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:paddingTop="10dp"
            android:text="@string/init_session"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </RelativeLayout>

</FrameLayout>